Activate and focus notification content view

- Activate and focus notification content view with text selection
  changed event in Android. If text selection changed is dispatched from
  Android, it means that user is trying to type something in Android
  notification.

Bug: 822140
Test: unit_tests:ArcAccessibilityHelperBridgeTest
Change-Id: I9e7613d2121cbd43e2cfd9ecc602a8834f18bfdf
Reviewed-on: https://chromium-review.googlesource.com/963960
Commit-Queue: Yuki Awano <yawano@chromium.org>
Reviewed-by: David Tseng <dtseng@chromium.org>
Reviewed-by: Yusuke Sato <yusukes@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544951}
Former-commit-id: 83b5b08ea23c5c348b9d694d813ed76169493b8e