chrome/browser/chromeos/arc/accessibility/arc_accessibility_helper_bridge.cc
@@ -281,13 +281,41 @@ void ArcAccessibilityHelperBridge::OnAccessibilityEvent(
 
     tree_source->NotifyAccessibilityEvent(event_data.get());
 
-    ui::AXTreeData tree_data;
-    if (tree_source->GetTreeData(&tree_data) && is_notification_event &&
-        event_data->event_type ==
-            arc::mojom::AccessibilityEventType::WINDOW_STATE_CHANGED) {
-      DCHECK(event_data->notification_key.has_value());
-      UpdateTreeIdOfNotificationSurface(event_data->notification_key.value(),
-                                        tree_data.tree_id);
+    if (is_notification_event) {
+      switch (event_data->event_type) {
+        case arc::mojom::AccessibilityEventType::VIEW_TEXT_SELECTION_CHANGED: {
+          // If text selection changed event is dispatched from Android, it
+          // means that user is trying to type a text in Android notification.
+          // Dispatch text selection changed event to notification content view
+          // as the view can take necessary actions, e.g. activate itself, etc.
+          auto* surface_manager = ArcNotificationSurfaceManager::Get();
+          if (!surface_manager)
+            break;
+
+          ArcNotificationSurface* surface = surface_manager->GetArcSurface(
+              event_data->notification_key.value());
+          if (!surface)
+            break;
+
+          surface->GetAttachedHost()->NotifyAccessibilityEvent(
+              ax::mojom::Event::kTextSelectionChanged, true);
+          break;
+        }
+        case arc::mojom::AccessibilityEventType::WINDOW_STATE_CHANGED: {
+          // TODO(yawano): Move this to OnNotificationStateChanged. This can be
+          // moved there if we don't need to care about backward compat.
+          ui::AXTreeData tree_data;
+          if (!tree_source->GetTreeData(&tree_data))
+            break;
+
+          DCHECK(event_data->notification_key.has_value());
+          UpdateTreeIdOfNotificationSurface(
+              event_data->notification_key.value(), tree_data.tree_id);
+          break;
+        }
+        default:
+          break;
+      }
     }
 
     return;
